terminado POST, falta response

--- a/views/index.pug
+++ b/views/index.pug
@@ -24,7 +24,7 @@ block content
     table
         thead
             tr
-            th Ingredientes para 1800 gramos de masa
+            th Ingredientes para #{tipoMasa} gramos de masa
         tbody
             th Ingrediente
             th Peso
