--- a/views/complete.pug
+++ b/views/complete.pug
@@ -1,9 +1,16 @@
 extends layout
 
 block content
-  br
-  label(for='cantidad') Cantidad de bollo:
-  input#fname(type='text' name='cantidad')
-  br
-  input(type="submit" value="Sumar")
-  input(type="submit" value="Calcular")
+  h4 Ingredientes para #{gramosPedido} gramos de masa #{masaPedida}
+  table
+        thead
+            tr
+            th 
+        tbody
+            th Ingredientes
+            each nom in nombreIngredientes
+              tr
+                td= nom
+            ul  
+              each val in valoresIngredientes
+                li= val
